--- a/BlackJack/BlackJack.csproj
+++ b/BlackJack/BlackJack.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Computer.cs" />
     <Compile Include="Deck.cs" />
     <Compile Include="Player.cs" />
+    <Compile Include="PointsProcessor.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Suit.cs" />
